commented phoneNumber verification

--- a/src/components/pages/SignUpPage.scss
+++ b/src/components/pages/SignUpPage.scss
@@ -6,9 +6,8 @@
 	align-items: center;
 }
 
-.avatar {
+.avatar-logo {
 	margin: 10px;
-	background-color: #FF5733;
 }
 
 .form {
@@ -16,6 +15,6 @@
 	margin-top: 2rem;
 }
 
-.submit {
+.submit-button {
 	margin: 40px 0 16px;
 }
